[package]
name = "hlhd"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.1"
bevy_ecs = "0.13.0"
bevy_rapier2d = "0.25.0"
leafwing-input-manager = { version = "0.13.2", features = ["egui"] }
bevy_egui = "0.25.0"
serde = "1.0.197"
rf = "0.14.1"
bevy_pancam = { version = "0.11.1", features = ["bevy_egui"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
