[package]
name = "hlhd"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.1"
bevy_ecs = "0.13.0"
bevy_rapier3d = "0.25.0"
leafwing-input-manager = "0.13.2"
bevy_egui = "0.26.0"
bevy_pancam = "0.11.0"
serde = "1.0.197"
rfd = "0.14.1"
bevy_editor_pls = "0.8.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
